Repaired anchors to consider header on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -145,15 +145,25 @@ ul {
     #navbar {
         width: 100%;
         height: 250px;
+        border-bottom: 2px solid white;
     }
 
     #main-doc {
         width: 100%;
-        margin-top: 280px;
+        margin-top: 320px;
         margin-left: 0;
     }
 
     .navigation-header {
         width: 100%;
+    }
+
+    code {
+        font-size: 3.4vw;
+    }
+
+    .anchor {
+        padding-top: 320px;
+        margin-top: -320px;
     }
 }
